src/test/deca/syntax/parser/invalid/decl_var_type_symbole_exclamation.deca
// Test de parser, le type n'est pas valide, mais est un symbole spécial
// à la place

{
    ! x = 5;
}